RESOLVED FIXED 250337
SampleBufferContentKeySessionSupportEnabled is not attached to DeprecatedGlobalSettings
https://bugs.webkit.org/show_bug.cgi?id=250337
Summary SampleBufferContentKeySessionSupportEnabled is not attached to DeprecatedGlob...
Brent Fulgham
Reported 2023-01-09 14:00:48 PST
Following Bug 247926 we no longer attached SampleBufferContentKeySessionSupportEnabled to the WebCore::DeprecatedGlobalSettings object.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-01-09 14:01:24 PST
Brent Fulgham
Comment 2 2023-01-09 14:02:52 PST
EWS
Comment 3 2023-01-10 10:21:49 PST
Committed 258734@main (14816ea69ff9): <https://commits.webkit.org/258734@main> Reviewed commits have been landed. Closing PR #8413 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.