SampleBufferContentKeySessionSupportEnabled is not attached to DeprecatedGlobalSettings https://bugs.webkit.org/show_bug.cgi?id=250337 <rdar://problem/104044710>

Reviewed by Eric Carlson.

Correct a missing 'webcorebindings' field in the new generator file.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml: Include
missing webcoreOnChange binding.
* Source/WebCore/page/DeprecatedGlobalSettings.cpp: Remove unused method
* Source/WebCore/page/DeprecatedGlobalSettings.h: Remove unused method and
member variable.
* Source/WebCore/page/SettingsBase.cpp: Add handler for KeySessionSupport.
* Source/WebCore/page/SettingsBase.h

Canonical link: https://commits.webkit.org/258734@main