Source/WebCore/page/SettingsBase.h
@@ -166,6 +166,9 @@ protected:
 #if ENABLE(LAYER_BASED_SVG_ENGINE)
     void layerBasedSVGEngineEnabledChanged();
 #endif
+#if HAVE(AVCONTENTKEYSPECIFIER)
+    void sampleBufferContentKeySessionSupportEnabledChanged();
+#endif
 
     Page* m_page;
 
